[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "mpl_utils"
requires-python = ">=3.7"
dependencies = [
    "typing_extensions",
    "matplotlib>=3.5"
]
dynamic = ["version"]

[tool.setuptools_scm]

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'

[tool.isort]
profile = "black"
